# magnaprobe-toolbox

./: 00-QC_magnaprobe_data.py  00-quality_check.py  01-formatting-library.py  01-formatting-line.py  01-formatting-longline.py  01-formatting_transect_line.py  02-plot.py  README.md  emlid.py  pyproject.toml  readme.md  requirement.txt  scratch.py  scratch_2.py  semivariogram-special.py  semivariogram.py
data/: SemiVariogramData_ForMarc.xlsx
magnaprobe_toolbox/: __init__.py
magnaprobe_toolbox/analysis/: binomial_filter.py  distance.py  semivariogram.py  statistic.py
magnaprobe_toolbox/io/: __init__.py  config.py  export.py  load.py  plot.py  tools.py
